Fix naming and some minor implementations